# coral

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  action.yml
.github/: release-drafter.yml
.github/workflows/: ci.yml  example-pages-deploy.yml  example-pr-analysis.yml  pages.yml
sandbox/proto/analytics/v1/: analytics.proto
sandbox/proto/common/v1/: address.proto  money.proto
sandbox/proto/notification/v1/: notification.proto
sandbox/proto/order/v1/: order.proto
sandbox/proto/payment/v1/: payment.proto
sandbox/proto/product/v1/: product.proto
sandbox/proto/shipping/v1/: shipping.proto
sandbox/proto/user/v1/: user.proto
src/: analyzer.rs  decoder.rs  diff.rs  error.rs  lib.rs  main.rs  reporter.rs  server.rs
src/domain/: graph.rs  mod.rs  node.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  index.css
ui/src/components/: DetailPanel.tsx  ErrorBoundary.tsx  Graph.tsx  PackageFilterPanel.tsx
ui/src/components/nodes/: BaseNode.tsx  EnumNode.tsx  ExternalNode.tsx  MessageNode.tsx  PackageGroupNode.tsx  ServiceNode.tsx  index.ts
ui/src/constants/: layout.ts  styles.ts
ui/src/hooks/: useAutoLayout.ts  useGraphData.ts  useIsMobile.ts  usePackageGroups.ts  usePackageVisibility.ts  useSelection.ts  useSwipeToClose.ts
ui/src/types/: graph.ts
